--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
-    "socket.io": "^4.7.5",
-     "sequelize": "^6.0.0"
+    "sequelize": "^6.0.0",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
